avoid UnsupportedEncodingException by using StandardCharsets