@@ -5,7 +5,6 @@ import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
@@ -51,7 +50,8 @@ public class HttpUtils {
                 is = connection.getErrorStream();
             }
 
-            try (BufferedReader rd = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8))) {
+            try (BufferedReader rd = new BufferedReader(
+                    new InputStreamReader(is, StandardCharsets.UTF_8))) {
                 String line;
                 StringBuffer response = new StringBuffer();
                 while ((line = rd.readLine()) != null) {
@@ -82,7 +82,7 @@ public class HttpUtils {
             connection.setRequestMethod(httpMethod);
 
             if (headers != null) {
-                for (Entry<String, String> entry: headers.entrySet()) {
+                for (Entry<String, String> entry : headers.entrySet()) {
                     connection.setRequestProperty(entry.getKey(), entry.getValue());
                 }
             }
@@ -99,15 +99,11 @@ public class HttpUtils {
     }
 
     public static String urlEncode(String url, boolean keepPathSlash) {
-        String encoded;
-        try {
-            encoded = URLEncoder.encode(url, "UTF-8").replace("+", "%20");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException("UTF-8 encoding is not supported.", e);
-        }
+        String encoded = URLEncoder.encode(url, StandardCharsets.UTF_8).replace("+", "%20");
         if (keepPathSlash) {
-            encoded = encoded.replace("%2F", "/");
+            return encoded.replace("%2F", "/");
+        } else {
+            return encoded;
         }
-        return encoded;
     }
 }
